--- a/reticula.html
+++ b/reticula.html
@@ -182,20 +182,75 @@
 
     <section class="container">
 
-      <h2>¿Qué es una retícula?</h2>
-      <p>La retícula es la estructura base del diseño editorial. Ordena, jerarquiza y da coherencia visual al conjunto de páginas.</p>
+    <h2>¿Qué es una retícula en diseño editorial?</h2>
+<p class="muted">
+  La <strong>retícula</strong> es una estructura formada por líneas imaginarias que ayudan a organizar el contenido de una página. 
+  En secundaria la usamos sin darnos cuenta: en cuadernos cuadriculados, en presentaciones digitales o 
+  cuando acomodamos imágenes y texto para que “se vea bien”.  
+  La retícula permite que todos los elementos estén ordenados, alineados y sean fáciles de leer.
+</p>
 
-      <h2>Columnas y márgenes</h2>
-      <p>Una retícula puede tener desde dos hasta doce columnas, dependiendo del tipo de publicación. Los márgenes funcionan como “zonas de respiración”.</p>
+<!-- ==== IMAGEN 1 ==== -->
+<div style="margin: 28px 0; text-align:center;">
+  <img src="160.jpg" class="img-zoomable" alt="Ejemplo de retícula básica" style="max-width:100%; border-radius:12px; cursor: zoom-in;">
+  <p style="color:var(--muted); font-size:14px;">Ejemplo de una retícula simple de columnas.</p>
+</div>
 
-      <h2>Modulación</h2>
-      <p>Las retículas modulares permiten dividir la página en unidades proporcionales que soportan una mayor complejidad visual.</p>
+<h2>¿Por qué es importante usar retícula?</h2>
+<p>
+  Cuando una página está bien organizada, el lector puede encontrar la información más rápido.  
+  La retícula sirve como guía para decidir dónde colocar títulos, párrafos, imágenes y pies de foto.  
+  También ayuda a que todas las páginas de una revista, libro o folleto mantengan un estilo coherente.
+</p>
 
-      <h2>Retícula editorial clásica</h2>
-      <p>Basada en la proporción áurea, construye relaciones armoniosas entre caja tipográfica, márgenes y columnas.</p>
+<!-- ==== IMAGEN 2 ==== -->
+<div style="margin: 28px 0; text-align:center;">
+  <img src="161.jpg" class="img-zoomable" alt="Uso de retícula en libros y revistas" style="max-width:100%; border-radius:12px; cursor: zoom-in;">
+  <p style="color:var(--muted); font-size:14px;">La retícula permite mantener orden y equilibrio visual.</p>
+</div>
 
-      <h2>Aplicación</h2>
-      <p>Una buena retícula permite variación con coherencia. No limita: proporciona una base flexible que mantiene el orden incluso en diseños dinámicos.</p>
+<h2>Tipos de retícula</h2>
+<p>
+  Existen retículas de <strong>una columna</strong> (usadas en textos largos), de <strong>dos o más columnas</strong> 
+  (comunes en revistas), y retículas <strong>modulares</strong>, que forman cuadros uniformes para acomodar elementos gráficos.  
+  Los diseñadores eligen el tipo según el proyecto. Por ejemplo:  
+  una revista juvenil puede usar muchas columnas porque mezcla texto e imágenes, mientras que un manual escolar 
+  suele usar una estructura más simple para facilitar la lectura.
+</p>
+
+<!-- ==== IMAGEN 3 ==== -->
+<div style="margin: 28px 0; text-align:center;">
+  <img src="162.jpg" class="img-zoomable" alt="Ejemplos de retículas modulares" style="max-width:100%; border-radius:12px; cursor: zoom-in;">
+  <p style="color:var(--muted); font-size:14px;">Retículas modulares utilizadas para proyectos más visuales.</p>
+</div>
+
+<h2>Video recomendado</h2>
+<p>
+  Este video explica de forma sencilla cómo funciona una retícula y por qué es tan importante para diseñar publicaciones claras y atractivas.
+</p>
+
+<!-- ==== VIDEO YOUTUBE ==== -->
+<div style="margin: 32px 0; text-align:center;">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/WS-Cr3cqH8w?si=j_bCRLA12TaoeM9i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <p style="color:var(--muted); font-size:14px;">Cómo usar retículas en diseño editorial.</p>
+</div>
+
+<h2>Documento en PDF</h2>
+<p>
+  Aquí puedes consultar un documento con ejemplos reales de retículas usadas en libros, revistas y materiales educativos.
+</p>
+
+<!-- ==== PDF EMBEBIDO ==== -->
+<div style="margin: 32px 0;">
+  <iframe 
+      src="Reticulas.pdf" 
+      width="100%" 
+      height="500" 
+      style="border:1px solid var(--border); border-radius:12px;">
+  </iframe>
+  <p style="color:var(--muted); font-size:14px;">PDF: Ejemplos de retículas profesionales.</p>
+</div>
+
 
     </section>
 
