--- a/proceso.html
+++ b/proceso.html
@@ -149,8 +149,89 @@
       </header>
 
       <section class="container">
-        <h2>Flujo y entregables</h2>
-        <p class="muted">Describe aquí las etapas: briefing, wireframes, pruebas, PDF final, exportación para imprenta, etc.</p>
+       <h2>¿Qué es el proceso de maquetación?</h2>
+<p class="muted">
+  El <strong>proceso de maquetación</strong> es el conjunto de pasos que permiten organizar texto, imágenes,
+  títulos y todos los elementos de una publicación para que el contenido sea fácil de leer, atractivo
+  y coherente. Aunque parezca que los libros y revistas “se ordenan solos”, todo está cuidadosamente
+  planeado para guiar la mirada del lector y transmitir una experiencia clara.
+</p>
+
+<!-- ==== IMAGEN 1 ==== -->
+<div style="margin: 28px 0; text-align:center;">
+  <img src="201.jpg" class="img-zoomable" alt="Etapas básicas de la maquetación" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+  <p style="color:var(--muted); font-size:14px;">Principios esenciales de la maquetación editorial.</p>
+</div>
+
+<h2>1. Preparación del contenido</h2>
+<p>
+  Antes de colocar cualquier elemento en una página, el diseñador recibe los textos finales
+  (revisados y corregidos), así como las imágenes en buena calidad.  
+  En esta etapa se decide qué partes serán títulos, subtítulos, párrafos, destacados o notas.
+</p>
+
+<!-- ==== IMAGEN 2 ==== -->
+<div style="margin: 28px 0; text-align:center;">
+  <img src="202.jpg" class="img-zoomable" alt="Organización del contenido editorial" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+  <p style="color:var(--muted); font-size:14px;">Organización del texto antes de maquetar.</p>
+</div>
+
+<h2>2. Construcción de la retícula</h2>
+<p>
+  La <strong>retícula</strong> actúa como un mapa invisible que divide la página en columnas, filas y márgenes.
+  Esto permite mantener equilibrio visual y coherencia entre todas las páginas del documento.
+  La retícula también ayuda a decidir dónde colocar imágenes, pies de foto y elementos decorativos.
+</p>
+
+<h2>3. Distribución de textos e imágenes</h2>
+<p>
+  Una vez definida la retícula, el diseñador empieza a colocar cada elemento: párrafos, títulos,
+  imágenes, gráficos y recuadros informativos. Se cuida que las páginas no queden saturadas y
+  que la mirada del lector pueda avanzar sin tropiezos.
+</p>
+
+<!-- ==== IMAGEN 3 ==== -->
+<div style="margin: 28px 0; text-align:center;">
+  <img src="203.jpg" class="img-zoomable" alt="Distribución de elementos durante la maquetación" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+  <p style="color:var(--muted); font-size:14px;">Distribución equilibrada de texto e imágenes.</p>
+</div>
+
+<h2>4. Revisión estética y legibilidad</h2>
+<p>
+  En esta etapa se ajustan detalles como interlineado, espacio entre columnas, tamaños de letra,
+  contrastes de color y alineaciones. El objetivo es que la lectura sea cómoda y que los elementos
+  visuales acompañen al contenido sin distraerlo.
+</p>
+
+<!-- ==== VIDEO DE YOUTUBE ==== -->
+<div style="margin: 32px 0; text-align:center;">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/IGpstgFXU4M?si=KwaA14MVzmx5VLJE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <p style="color:var(--muted); font-size:14px;">Video: ¿Cómo se maqueta un libro paso a paso?</p>
+</div>
+
+<h2>5. Revisión final y exportación</h2>
+<p>
+  Finalmente, se revisa que no haya errores de ortografía, saltos de línea incorrectos,
+  imágenes pixeladas o márgenes desalineados.  
+  La versión final se exporta como PDF, el formato más usado para impresión y distribución digital.
+</p>
+
+<h2>Documento de consulta</h2>
+<p>
+  Aquí puedes revisar un ejemplo completo del proceso de maquetación aplicado a una publicación real.
+</p>
+
+<!-- ==== PDF EMBEBIDO ==== -->
+<div style="margin: 32px 0;">
+  <iframe
+    src="maquet.pdf"
+    width="100%"
+    height="480"
+    style="border:1px solid var(--border); border-radius:12px;">
+  </iframe>
+  <p style="color:var(--muted); font-size:14px;">PDF: Ejemplo práctico del proceso de maquetación.</p>
+</div>
+
       </section>
 
       <footer>
