--- a/reticula.html
+++ b/reticula.html
@@ -192,7 +192,7 @@
 
 <!-- ==== IMAGEN 1 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="176.png" class="img-zoomable" alt="Ejemplo de retícula básica" style="max-width:100%; border-radius:12px; cursor: zoom-in;">
+  <img src="176.jpg" class="img-zoomable" alt="Ejemplo de retícula básica" style="max-width:100%; border-radius:12px; cursor: zoom-in;">
   <p style="color:var(--muted); font-size:14px;">Ejemplo de una retícula simple de columnas.</p>
 </div>
 
