--- a/cubierta.html
+++ b/cubierta.html
@@ -165,7 +165,7 @@
 
 <!-- ==== IMAGEN 1 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="181.jpg" class="img-zoomable" alt="Ejemplo de una portada editorial" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoom-img">
+  <img src="181.jpg" class="zoomable" alt="Ejemplo de una portada editorial" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoom-img">
   <p style="color:var(--muted); font-size:14px;">Ejemplo de portada moderna con uso de fotografía y tipografía clara.</p>
 </div>
 
@@ -179,7 +179,7 @@
 
 <!-- ==== IMAGEN 2 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="182.jpg" class="img-zoomable" class="img-zoomable" alt="Comparación de estilos de cubierta" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoom-img">
+  <img src="182.jpg" class="zoomable" class="img-zoomable" alt="Comparación de estilos de cubierta" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoom-img">
   <p style="color:var(--muted); font-size:14px;">Comparación de estilos: minimalista vs. ilustrado.</p>
 </div>
 
@@ -196,7 +196,7 @@
 
 <!-- ==== IMAGEN 3 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="183.jpeg" class="img-zoomable" alt="Elementos de una cubierta" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoom-img">
+  <img src="183.jpeg" class="zoomable" alt="Elementos de una cubierta" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoom-img">
   <p style="color:var(--muted); font-size:14px;">Distribución de elementos dentro de una cubierta estándar.</p>
 </div>
 
