--- a/proceso.html
+++ b/proceso.html
@@ -159,7 +159,7 @@
 
 <!-- ==== IMAGEN 1 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="201.jpg" class="img-zoomable" alt="Etapas básicas de la maquetación" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+  <img src="201.jpg" class="zoomable" alt="Etapas básicas de la maquetación" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
   <p style="color:var(--muted); font-size:14px;">Principios esenciales de la maquetación editorial.</p>
 </div>
 
@@ -172,7 +172,7 @@
 
 <!-- ==== IMAGEN 2 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="202.jpg" class="img-zoomable" alt="Organización del contenido editorial" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+  <img src="202.jpg" class="zoomable" alt="Organización del contenido editorial" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
   <p style="color:var(--muted); font-size:14px;">Organización del texto antes de maquetar.</p>
 </div>
 
@@ -192,7 +192,7 @@
 
 <!-- ==== IMAGEN 3 ==== -->
 <div style="margin: 28px 0; text-align:center;">
-  <img src="203.jpg" class="img-zoomable" alt="Distribución de elementos durante la maquetación" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+  <img src="203.jpg" class="zoomable" alt="Distribución de elementos durante la maquetación" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
   <p style="color:var(--muted); font-size:14px;">Distribución equilibrada de texto e imágenes.</p>
 </div>
 
