--- a/color.html
+++ b/color.html
@@ -196,7 +196,7 @@
 
   <!-- ==== IMAGEN 1 ==== -->
   <div style="margin: 28px 0; text-align:center;">
-    <img src="171.jpg" class="zoomable" alt="Rueda cromática básica" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+    <img src="171.jpg" class="zoomable" alt="Rueda cromática básica" style="max-width:100%; border-radius:12px; cursor:pointer;">
     <p style="color:var(--muted); font-size:14px;">La rueda de color es una herramienta fundamental para combinar colores.</p>
   </div>
 
@@ -211,7 +211,7 @@
 
   <!-- ==== IMAGEN 2 ==== -->
   <div style="margin: 28px 0; text-align:center;">
-    <img src="172.jpg" class="zoomable" alt="Ejemplos de armonías de color" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+    <img src="172.jpg" class="zoomable" alt="Ejemplos de armonías de color" style="max-width:100%; border-radius:12px; cursor:pointer;">
     <p style="color:var(--muted); font-size:14px;">Ejemplo de armonías complementarias, análogas y monocromáticas.</p>
   </div>
 
@@ -224,7 +224,7 @@
 
   <!-- ==== IMAGEN 3 ==== -->
   <div style="margin: 28px 0; text-align:center;">
-    <img src="173.jpg" class="zoomable" alt="Significado de distintos colores" style="max-width:100%; border-radius:12px; cursor:pointer;" class="zoomable">
+    <img src="173.jpg" class="zoomable" alt="Significado de distintos colores" style="max-width:100%; border-radius:12px; cursor:pointer;">
     <p style="color:var(--muted); font-size:14px;">Los colores pueden influir en cómo interpretamos un contenido.</p>
   </div>
 
