--- a/reticula.html
+++ b/reticula.html
@@ -74,7 +74,10 @@
 }
 
 
-    .container h2{margin-top:32px;color:var(--accent)}
+    .container h2 {
+  margin-top:32px;
+  color:#ffffff;
+}
     .container p{color:var(--muted)}
 
     footer{padding:24px 60px;border-top:1px solid var(--border);color:var(--muted)}
