--- a/index.html
+++ b/index.html
@@ -156,6 +156,14 @@
     </a>
 
   </nav>
+    <!-- SOFTWARE RECOMENDADO -->
+    <a href="software.html" class="navlink">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+        <rect x="3" y="4" width="18" height="14" rx="2" stroke="currentColor" stroke-width="1.4"/>
+        <path d="M7 9h4M7 13h7" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+      </svg>
+      Software recomendado
+    </a>
 
   <div class="actions">
     <a class="btn mail" href="mailto:jose.davila@institutoalejandria.edu.mx">✉️ Enviar correo</a>
